# map-syntax

./: .gitignore  .travis.yml  LICENSE  README.md  map-syntax.cabal  runCoverage.sh  runTestsAndCoverage.sh
.github/workflows/: ci.yml  haskell-ci.yml
src/Data/Map/: FuncSyntax.hs  Syntax.hs
test/: TestSuite.hs
test/Data/Map/Syntax/: Tests.hs  Util.hs
