name:           map-syntax
version:        0.1
synopsis:       Syntax sugar for defining maps
description:
    Haskell's canonical list of tuples syntax for defining maps is not very
    convenient and also has ambiguous semantics.  This package leverages do
    notation to create a lighter syntax that makes semantics explicit and also
    allows the option of fail-fast handling of duplicate keys.
license:        BSD3
license-file:   LICENSE
author:         Doug Beardsley
maintainer:     Doug Beardsley
build-type:     Simple
cabal-version:  >= 1.6
category:       Data Structures

extra-source-files:
  .ghci,
  LICENSE,
  README.md


Library
  hs-source-dirs: src

  exposed-modules:
    Data.Map.Syntax


  build-depends:
    base                       >= 4       && < 5,
    mtl                        >= 2.0     && < 2.3

  if impl(ghc >= 6.12.0)
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2

  ghc-prof-options:    -prof -auto-all


source-repository head
  type:     git
  location: https://github.com/mightybyte/map-syntax.git

